# histopatseg

./: .gitignore  Makefile  README.md  pyproject.toml
checkpoints/: linear_probe.ckpt
docs/: mkdocs.yml
docs/docs/: index.md
histopatseg/: __init__.py  constants.py  dataset.py  features.py  plots.py  utils.py
notebooks/: evaluation_embeddings_foundation_models.ipynb  explo_LoRa.ipynb  explo_classification.ipynb  explo_embedding_cptac_uni2.ipynb  explo_embeddings_lunghist700.ipynb  explo_few_shot_learning.ipynb  explo_fitted_protonet_tcga.ipynb  explo_gigapath_embeddings.ipynb  explo_lunghist700.ipynb  explo_models.ipynb  explo_protonet_cptac_enriched.ipynb  explo_protonet_cptac_enriched_classification_lunghist700.ipynb  explo_protonet_cptac_lunghist700.ipynb  explo_protonet_cptac_lunghist700_superclass.ipynb  explo_protonet_cptac_tcga_ut.ipynb  explo_protonet_tcga_lunghist700_superclass.ipynb  explo_tiliing.ipynb  model_comparison.ipynb  notebooks_template.ipynb  visualisation_embeddings_deconfounding.ipynb  visualisation_embeddings_foundation_models.ipynb  visualisation_embeddings_foundation_models_centercrop.ipynb  visualisation_embeddings_foundation_models_old.ipynb
scripts/: compute_embedding_tcga_ut.sh  compute_embeddings.sh  compute_embeddings_centercrop.sh  compute_embeddings_resize.sh  compute_prototype_lunghist700.sh  compute_prototype_tcga_ut.sh  evaluate_foundation_models.py  evaluate_foundation_models.sh  evaluate_foundation_models_centercrop.sh  resize_lunghist700.sh  run_gigapath_LungHist700.sh  tile_lunghist700.sh  train_mil_from_image.sh  (+1 more)
(+52 files in other folders)
