[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "histopatseg"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Valentin Oreiller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"


[tool.ruff]
line-length = 99
src = ["histopatseg"]
include = ["pyproject.toml", "histopatseg/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["histopatseg"]
force-sort-within-sections = true

